2006-01-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* extras/itsave.m: Fixed bug [1396020]. Now itsave() works properly
	in both Matlab and Octave. Thanks to Jordy Potman for providing a
	patch.

2006-01-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* autogen.sh: Reordering of the invoked commands

2005-12-29  Adam Piatyszek  <ediap@users.sourceforge.net>

	* NEWS, configure.ac, doc/local/index.doc.in: Updated for the
	future release

	* itpp.spec.in: Minor fixes

==============================================================================

2005-12-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.9.0 released (CVS tag: release-3-9-0)

2005-12-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h, itpp/base/vec.h: Added a `value_type' typedef,
	which provides a similar notation to the std::vector<> class.
	Requested by Christian Stimming in patch report [1387075].

	* doc/local/index.doc.in: `https://' links changed to `http://'
	ones

	* itpp/base/parser.cpp: Implemented feature request [1167378]. An
	error message is displayed if the Parser's init() functions can
	not open a file.

	* extras/itload.m, extras/itsave.m, extras/Makefile.am,
	Makefile.am, configure.ac: Added missing `itload.m' and `itsave.m'
	files for loading and saving an itfile in Matlab/Octave (function
	and file names changed from `load_it.m' and `save_it.m'). 

2005-12-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* README, doc/local/index.doc.in: Introduction text updated

	* itpp.spec.in: Initial spec file prepared. Not yet included in
	the package.

	* itpp.pc.in: Cosmetic changes

	* doc/local/verification.doc: Updated with new information from
	testers

	* NEWS: Updated to reflect recent changes

	* itpp/base/transforms.cpp, tests/transforms_test.ref: Fixed bug
	[1388024]. Both versions of fft_real() and ifft_real() functions
	(based on FFTW3 and MKL) worked differently than the reference