@@ -1,3 +1,4 @@
 include $(top_srcdir)/Makefile.common
 
-EXTRA_DIST = itpp_logga.eps itpp_logga.fig itpp_logga.jpg itpp_logga.xcf
+EXTRA_DIST = itpp_logga.eps itpp_logga.fig itpp_logga.jpg itpp_logga.xcf \
+  favicon.ico
