@@ -5,6 +5,7 @@
   <title>Welcome to $projectname!</title>
   <link href="doxygen.css" rel="stylesheet" type="text/css">
   <link href="tabs.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="./favicon.ico">
 </head>
 <body>
 <div style="width: 100%; height: 40px; background-color: #ffff00; border: 1px solid #b0b0b0; text-align: right; margin: 2px; padding: 2px;">
